DuPont DevSB/src/objects/ccrz__E_SiteIndex__c.object
<CustomObject>
    <description>A hashed directory of SEO friendly URLs and BreadCrumb data.</description>
    <fields>
        <fullName>ccrz__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active flag to indicate if Site Index record is in use. When creation of Site Index records is completed by the batch job, all old values will be disabled and removed.</description>
        <inlineHelpText>Active flag to indicate if Site Index record is in use by the Storefront.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Breadcrumb__c</fullName>
        <description>A flat JSON Breadcrumb structure containing the Category and all parent Categories.</description>
        <inlineHelpText>A flat JSON Breadcrumb structure containing the Category and all parent Categories.</inlineHelpText>
        <label>Breadcrumb</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category to which this Index applies.</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>CC Site Indicies</relationshipLabel>
        <relationshipName>CCSiteIndicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__FriendlyURLHash__c</fullName>
        <description>Indexed MD5 hash of the Friendly URL.</description>
        <externalId>true</externalId>
        <inlineHelpText>Indexed MD5 hash of the Friendly URL.</inlineHelpText>
        <label>Friendly URL Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__FriendlyURL__c</fullName>
        <label>Friendly URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SiteIndexId__c</fullName>
        <description>External Id &amp; Unique Identifier to uniquely identify Site Index records.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id &amp; Unique Identifier to uniquely identify Site Index records.</inlineHelpText>
        <label>Site Index Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Site Index</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>CC Site Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Site Indices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>